--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "npm-run-all test build server",
     "test": "cross-env NODE_ENV=test mocha --compilers js:babel-core/register test/routes/goods-test.js",
-    "build": "babel ./ --out-dir lib/ --ignore ./node_modules,./.babelrc,./package.json,./package-lock.json,./test --copy-files"
+    "build": "babel ./ --out-dir lib/ --ignore ./node_modules,./.babelrc,./package.json,./package-lock.json,./test --copy-files",
+    "server": "cross-env NODE_ENV=dev PORT=3001 node lib/bin/www",
+    "clean": "rimraf ./lib && mkdir lib"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
@@ -25,6 +27,8 @@
     "chai-http": "^2.0.1",
     "chai-things": "^0.2.0",
     "cross-env": "^5.2.0",
-    "mocha": "^3.4.2"
+    "mocha": "^3.4.2",
+    "npm-run-all": "^4.1.5",
+    "rimraf": "^2.6.2"
   }
 }
